SEIR_Foundations/Lab3/Lab3Deliverables/Lab 3A/Sao_Paulo_Describe-Route-Tables.json
[
    {
        "RouteTableId": "rtb-07f60a10f22edc674",
        "Associations": [
            "subnet-081df085eea6a36a4",
            "subnet-024461fc1c68effa4"
        ],
        "Routes": [
            {
                "DestinationIPv4": "10.20.0.0/16",
                "DestinationIPv6": null,
                "GatewayId": "local",
                "TransitGatewayId": null,
                "NatGatewayId": null,
                "NetworkInterfaceId": null,
                "VpcPeeringConnectionId": null,
                "State": "active",
                "Origin": "CreateRouteTable"
            }
        ]
    },
    {
        "RouteTableId": "rtb-031331046e3c7892b",
        "Associations": [
            "subnet-055a04d0c136868d6",
            "subnet-055373c6c1cc5b388"
        ],
        "Routes": [
            {
                "DestinationIPv4": "10.20.0.0/16",
                "DestinationIPv6": null,
                "GatewayId": "local",
                "TransitGatewayId": null,
                "NatGatewayId": null,
                "NetworkInterfaceId": null,
                "VpcPeeringConnectionId": null,
                "State": "active",
                "Origin": "CreateRouteTable"
            },
            {
                "DestinationIPv4": "10.30.0.0/16",
                "DestinationIPv6": null,
                "GatewayId": null,
                "TransitGatewayId": "tgw-0d8ef4395489a02ce",
                "NatGatewayId": null,
                "NetworkInterfaceId": null,
                "VpcPeeringConnectionId": null,
                "State": "active",
                "Origin": "CreateRoute"
            },
            {
                "DestinationIPv4": "0.0.0.0/0",
                "DestinationIPv6": null,
                "GatewayId": "igw-0c2b66097c04bbe56",
                "TransitGatewayId": null,
                "NatGatewayId": null,
                "NetworkInterfaceId": null,
                "VpcPeeringConnectionId": null,
                "State": "active",
                "Origin": "CreateRoute"
            }
        ]
    },
    {
        "RouteTableId": "rtb-00a90c8684adb54fd",
        "Associations": [],
        "Routes": [
            {
                "DestinationIPv4": "10.20.0.0/16",
                "DestinationIPv6": null,
                "GatewayId": "local",
                "TransitGatewayId": null,
                "NatGatewayId": null,
                "NetworkInterfaceId": null,
                "VpcPeeringConnectionId": null,
                "State": "active",
                "Origin": "CreateRouteTable"
            }
        ]
    }
]
